--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.19.0",
     "vite": "^6.0.5",
+    "vite-plugin-html": "^3.2.2",
+    "vite-plugin-vconsole": "^2.1.1",
     "vite-tsconfig-paths": "^5.1.4"
   }
 }
