--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "license": "MIT",
   "packageManager": "yarn@4.6.0",
   "scripts": {
-    "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview",
+    "start": "vite",
+    "start:preview": "vite preview",
     "format": "prettier --write src",
     "lint": "eslint src",
     "lint:fix": "eslint src --fix"
