--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -19,7 +19,7 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true,
-    "strictNullChecks": false,
+    "strictNullChecks": true,
     "noImplicitAny": true,
     "paths": {
       "@/*": ["./src/*"]
