--- a/package.json
+++ b/package.json
@@ -15,11 +15,18 @@
     "lint:fix": "eslint src --fix"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.5.0",
+    "@tanstack/react-query": "^5.62.16",
+    "@tanstack/react-router": "^1.95.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@tanstack/eslint-plugin-router": "^1.92.7",
+    "@tanstack/router-devtools": "^1.95.1",
+    "@tanstack/router-plugin": "^1.95.1",
     "@types/node": "^22.10.5",
     "@types/react": "^19.0.3",
     "@types/react-dom": "^19.0.2",
@@ -33,8 +40,10 @@
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "globals": "^15.14.0",
     "prettier": "^3.4.2",
+    "ts-node": "^10.9.2",
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.19.0",
+    "vconsole": "^3.15.1",
     "vite": "^6.0.5",
     "vite-plugin-html": "^3.2.2",
     "vite-plugin-vconsole": "^2.1.1",
