--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -18,5 +18,5 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["vite.config.mts"]
+  "include": ["scripts/**/*.ts", "scripts/**/*.mts", "scripts/**/*.cts", "vite.config.mts"]
 }
