--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "packageManager": "yarn@4.6.0",
   "scripts": {
-    "build": "vite build",
+    "build": "vite build && tsc --noEmit",
     "start": "vite",
     "start:preview": "vite preview",
     "format": "prettier --write src",
