--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,7 @@ vite.config.*.timestamp*
 
 # Auto generated files
 src/routeTree.gen.ts
-src/localized-string/locale.d.ts
-src/localized-string/error-map.ts
-src/localized-string/locale.strings.ts
+src/locales/locale.d.ts
+src/locales/error-map.ts
+src/locales/locale.strings.ts
+src/assets/locales
