--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "typescript-eslint": "^8.19.0",
     "vconsole": "^3.15.1",
     "vite": "^6.0.5",
+    "vite-plugin-circular-dependency": "^0.5.0",
     "vite-plugin-html": "^3.2.2",
     "vite-plugin-vconsole": "^2.1.1",
     "vite-tsconfig-paths": "^5.1.4"
