--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "start:preview": "vite preview",
     "format": "prettier --write src",
     "lint": "eslint src",
-    "lint:fix": "eslint src --fix"
+    "lint:fix": "eslint src --fix",
+    "i18n": "ts-node scripts/i18n-string.ts && prettier --write src/locales/*.gen.* && eslint src/locales/*.gen.* --fix"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
     "@tanstack/react-query": "^5.62.16",
     "@tanstack/react-router": "^1.95.1",
+    "js-yaml": "^4.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0"
@@ -27,6 +29,7 @@
     "@tanstack/eslint-plugin-router": "^1.92.7",
     "@tanstack/router-devtools": "^1.95.1",
     "@tanstack/router-plugin": "^1.95.1",
+    "@types/js-yaml": "^4",
     "@types/node": "^22.10.5",
     "@types/react": "^19.0.3",
     "@types/react-dom": "^19.0.2",
@@ -46,6 +49,7 @@
     "typescript-eslint": "^8.19.0",
     "vconsole": "^3.15.1",
     "vite": "^6.0.5",
+    "vite-plugin-circular-dependency": "^0.5.0",
     "vite-plugin-html": "^3.2.2",
     "vite-plugin-vconsole": "^2.1.1",
     "vite-tsconfig-paths": "^5.1.4"
