--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
     "i18n": "ts-node scripts/i18n-string.ts && prettier --write src/locales/*.gen.* && eslint src/locales/*.gen.* --fix"
   },
   "dependencies": {
+    "@fluentui/react-components": "^9.57.0",
     "@reduxjs/toolkit": "^2.5.0",
     "@tanstack/react-query": "^5.62.16",
     "@tanstack/react-router": "^1.95.1",
     "js-yaml": "^4.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "scheduler": "^0.25.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
@@ -33,6 +35,7 @@
     "@types/node": "^22.10.5",
     "@types/react": "^19.0.3",
     "@types/react-dom": "^19.0.2",
+    "@types/scheduler": "^0",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.17.0",
     "eslint-config-prettier": "^9.1.0",
