--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "js-yaml": "^4.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-google-recaptcha-v3-safe": "^1.11.1",
+    "react-helmet-async": "^2.0.5",
     "react-redux": "^9.2.0",
     "scheduler": "^0.25.0"
   },
