--- a/package.json
+++ b/package.json
@@ -22,13 +22,15 @@
     "@reduxjs/toolkit": "^2.5.0",
     "@tanstack/react-query": "^5.62.16",
     "@tanstack/react-router": "^1.95.1",
+    "@tanstack/zod-adapter": "^1.97.23",
     "js-yaml": "^4.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-google-recaptcha-v3-safe": "^1.11.1",
     "react-helmet-async": "^2.0.5",
     "react-redux": "^9.2.0",
-    "scheduler": "^0.25.0"
+    "scheduler": "^0.25.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
@@ -51,7 +53,7 @@
     "globals": "^15.14.0",
     "prettier": "^3.4.2",
     "ts-node": "^10.9.2",
-    "type-fest": "^4.31.0",
+    "type-fest": "^4.33.0",
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.19.0",
     "vconsole": "^3.15.1",
