--- a/package.json
+++ b/package.json
@@ -23,13 +23,20 @@
     "@tanstack/react-query": "^5.62.16",
     "@tanstack/react-router": "^1.95.1",
     "@tanstack/zod-adapter": "^1.97.23",
+    "dompurify": "^3.2.4",
     "js-yaml": "^4.1.0",
+    "katex": "^0.16.21",
+    "markdown-it": "^14.1.0",
+    "markdown-it-math-loose": "^4.1.1",
+    "markdown-it-merge-cells": "^2.0.0",
+    "prismjs": "^1.29.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-google-recaptcha-v3-safe": "^1.11.1",
     "react-helmet-async": "^2.0.5",
     "react-redux": "^9.2.0",
     "scheduler": "^0.25.0",
+    "uuid": "^11.0.5",
     "zod": "^3.24.1"
   },
   "devDependencies": {
@@ -38,7 +45,9 @@
     "@tanstack/router-devtools": "^1.95.1",
     "@tanstack/router-plugin": "^1.95.1",
     "@types/js-yaml": "^4",
+    "@types/markdown-it": "^14",
     "@types/node": "^22.10.5",
+    "@types/prismjs": "^1",
     "@types/react": "^19.0.3",
     "@types/react-dom": "^19.0.2",
     "@types/scheduler": "^0",
@@ -60,6 +69,7 @@
     "vite": "^6.0.5",
     "vite-plugin-circular-dependency": "^0.5.0",
     "vite-plugin-html": "^3.2.2",
+    "vite-plugin-prismjs": "^0.0.11",
     "vite-plugin-vconsole": "^2.1.1",
     "vite-tsconfig-paths": "^5.1.4"
   }
