--- a/package.json
+++ b/package.json
@@ -19,16 +19,20 @@
     "@fluentui/react-components": "^9.57.0",
     "@fluentui/react-icons": "^2.0.270",
     "@fluentui/react-nav-preview": "^0.10.7",
+    "@monaco-editor/react": "^4.6.0",
     "@reduxjs/toolkit": "^2.5.0",
     "@tanstack/react-query": "^5.62.16",
     "@tanstack/react-router": "^1.95.1",
     "@tanstack/zod-adapter": "^1.97.23",
+    "css-element-queries": "^1.2.3",
     "dompurify": "^3.2.4",
     "js-yaml": "^4.1.0",
     "katex": "^0.16.21",
     "markdown-it": "^14.1.0",
     "markdown-it-math-loose": "^4.1.1",
     "markdown-it-merge-cells": "^2.0.0",
+    "monaco-ace-tokenizer": "^0.2.3",
+    "monaco-editor": "^0.52.2",
     "prismjs": "^1.29.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
