--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "packageManager": "yarn@4.6.0",
   "scripts": {
-    "build": "vite build && tsc --noEmit",
+    "build": "vite build && tsc -b",
+    "check": "tsc -b --noEmit",
     "start": "vite",
     "start:preview": "vite preview",
     "format": "prettier --write src",
@@ -19,16 +20,20 @@
     "@fluentui/react-components": "^9.57.0",
     "@fluentui/react-icons": "^2.0.270",
     "@fluentui/react-nav-preview": "^0.10.7",
+    "@monaco-editor/react": "^4.6.0",
     "@reduxjs/toolkit": "^2.5.0",
     "@tanstack/react-query": "^5.62.16",
     "@tanstack/react-router": "^1.95.1",
     "@tanstack/zod-adapter": "^1.97.23",
+    "css-element-queries": "^1.2.3",
     "dompurify": "^3.2.4",
     "js-yaml": "^4.1.0",
     "katex": "^0.16.21",
     "markdown-it": "^14.1.0",
     "markdown-it-math-loose": "^4.1.1",
     "markdown-it-merge-cells": "^2.0.0",
+    "monaco-ace-tokenizer": "^0.2.3",
+    "monaco-editor": "^0.52.2",
     "prismjs": "^1.29.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -48,8 +53,8 @@
     "@types/markdown-it": "^14",
     "@types/node": "^22.10.5",
     "@types/prismjs": "^1",
-    "@types/react": "^19.0.3",
-    "@types/react-dom": "^19.0.2",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "@types/scheduler": "^0",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.17.0",
