--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/scheduler": "^0",
+    "@vitejs/plugin-legacy": "^6.0.1",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.17.0",
     "eslint-config-prettier": "^9.1.0",
@@ -67,6 +68,7 @@
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "globals": "^15.14.0",
     "prettier": "^3.4.2",
+    "terser": "^5.38.0",
     "ts-node": "^10.9.2",
     "type-fest": "^4.33.0",
     "typescript": "^5.7.2",
