--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tanstack/react-query": "^5.62.16",
     "@tanstack/react-router": "^1.95.1",
     "@tanstack/zod-adapter": "^1.97.23",
+    "core-js": "^3.40.0",
     "css-element-queries": "^1.2.3",
     "dompurify": "^3.2.4",
     "js-yaml": "^4.1.0",
@@ -40,8 +41,10 @@
     "react-google-recaptcha-v3-safe": "^1.11.1",
     "react-helmet-async": "^2.0.5",
     "react-redux": "^9.2.0",
+    "regenerator-runtime": "^0.14.1",
     "scheduler": "^0.25.0",
     "uuid": "^11.0.5",
+    "whatwg-fetch": "^3.6.20",
     "zod": "^3.24.1"
   },
   "devDependencies": {
@@ -56,6 +59,7 @@
     "@types/prismjs": "^1",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/regenerator-runtime": "^0",
     "@types/scheduler": "^0",
     "@vitejs/plugin-legacy": "^6.0.1",
     "@vitejs/plugin-react": "^4.3.4",
@@ -80,5 +84,12 @@
     "vite-plugin-prismjs": "^0.0.11",
     "vite-plugin-vconsole": "^2.1.1",
     "vite-tsconfig-paths": "^5.1.4"
-  }
+  },
+  "browserslist": [
+    "defaults",
+    "chrome 50",
+    "firefox 45",
+    "edge 14",
+    "safari 10"
+  ]
 }
