--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@monaco-editor/react": "^4.6.0",
     "@reduxjs/toolkit": "^2.5.0",
     "@tanstack/react-query": "^5.62.16",
-    "@tanstack/react-router": "^1.95.1",
+    "@tanstack/react-router": "patch:@tanstack/react-router@npm%3A1.99.0#~/.yarn/patches/@tanstack-react-router-npm-1.99.0-5293e4c82d.patch",
     "@tanstack/zod-adapter": "^1.97.23",
     "core-js": "^3.40.0",
     "css-element-queries": "^1.2.3",
