--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@babel/types": "^7.26.8",
     "@eslint/js": "^9.17.0",
     "@tanstack/eslint-plugin-router": "^1.92.7",
     "@tanstack/react-query-devtools": "^5.66.0",
@@ -61,6 +62,7 @@
     "@types/scheduler": "^0",
     "@vitejs/plugin-legacy": "^6.0.1",
     "@vitejs/plugin-react": "^4.3.4",
+    "ast-kit": "^1.4.0",
     "eslint": "^9.17.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
@@ -68,10 +70,12 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "eslint-plugin-simple-import-sort": "^12.1.1",
+    "fast-glob": "^3.3.3",
     "globals": "^15.14.0",
     "prettier": "^3.4.2",
     "terser": "^5.38.0",
     "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "type-fest": "^4.33.0",
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.19.0",
