--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -47,6 +47,8 @@ jobs:
 
       - name: Build
         run: yarn build
+        env:
+          TYWZOJ_API_END_POINT: ${{ vars.TYWZOJ_API_END_POINT }}
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
