--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -7,7 +7,7 @@ on:
     branches: [main]
 
 concurrency:
-  group: ${{ github.event_name == 'pull_request' ? format('pr-{0}', github.event.pull_request.number) : 'push-main' }}
+  group: ${{ (github.event_name == 'pull_request' && format('pr-{0}', github.event.pull_request.number)) || 'push-main' }}
   cancel-in-progress: true
 
 jobs:
