--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -6,6 +6,10 @@ on:
   pull_request:
     branches: [main]
 
+concurrency:
+  group: ${{ (github.event_name == 'pull_request' && format('pr-{0}', github.event.pull_request.number)) || 'push-main' }}
+  cancel-in-progress: true
+
 jobs:
   build:
     runs-on: ubuntu-latest
