--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -8,6 +8,7 @@
     "mike-co.import-sorter",
     "rvest.vs-code-prettier-eslint",
     "streetsidesoftware.code-spell-checker",
-    "arcanis.vscode-zipfs"
+    "arcanis.vscode-zipfs",
+    "redhat.vscode-yaml"
   ]
 }
