--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,5 +41,6 @@
   "yaml.schemas": {
     ".schema/string-file.json": ["i18n/raw.yaml"],
     ".schema/localized-file.json": ["i18n/localized.*.yaml"]
-  }
+  },
+  "eslint.nodeEnv": "vscode-eslint"
 }
