--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,18 +1,21 @@
 {
   "git.ignoreLimitWarning": true,
-  "typescript.suggest.autoImports": true,
   "files.eol": "\n",
   "files.insertFinalNewline": true,
-  "typescript.tsdk": ".yarn/sdks/typescript/lib",
-  "importSorter.importStringConfiguration.maximumNumberOfImportExpressionsPerLine.count": 120,
-  "importSorter.importStringConfiguration.quoteMark": "double",
-  "importSorter.importStringConfiguration.trailingComma": "multiLine",
-  "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": "explicit"
+  "files.watcherExclude": {
+    "**/routeTree.gen.ts": true
   },
-  "editor.formatOnSave": true,
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": "explicit",
+    "source.removeUnusedImports": "explicit",
+  },
+  "editor.formatOnSave": false,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.detectIndentation": true,
+  "typescript.tsdk": "./node_modules/typescript/lib",
+  "typescript.suggest.autoImports": true,
+  "npm.packageManager": "yarn",
+  "removeUnusedImports.preserve": ["React", "ReactDOM"],
   "cSpell.words": [
     "fluentui",
     "interactor",
@@ -24,23 +27,8 @@
     "testdata",
     "tywzoj"
   ],
-  "search.exclude": {
-    "**/.yarn": true,
-    "**/.pnp.*": true
-  },
-  "eslint.nodePath": ".yarn/sdks",
-  "prettier.prettierPath": ".yarn/sdks/prettier/index.cjs",
-  "typescript.enablePromptUseWorkspaceTsdk": true,
-  "npm.packageManager": "yarn",
-  "files.exclude": {
-    "**/.pnp.*": true
-  },
-  "files.watcherExclude": {
-    "**/routeTree.gen.ts": true
-  },
   "yaml.schemas": {
     ".schema/string-file.json": ["i18n/raw.yaml"],
     ".schema/localized-file.json": ["i18n/localized.*.yaml"]
-  },
-  "eslint.nodeEnv": "vscode-eslint"
+  }
 }
